--- a/index.html
+++ b/index.html
@@ -1,107 +1,120 @@
 <html>
-  <head>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
-    <!-- bootstrap design part -->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<head>
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
+  <!-- bootstrap design part -->
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+    crossorigin="anonymous">
 
-    <!-- material design part -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/head.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/count.css">
-    <script defer src="assets/js/count.js"></script>
+  <!-- material design part -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
-    <meta charset="UTF-8">
-  </head>
-  <body>
-    <div class="mdl-layout__header header-container">
-      <div class="mdl-layout__header-row">
-        <img src="./assets/img/logo.svg">
-        <div class="head-logo">
-          DORRY
-        </div>
-        <div class="mdl-layout-spacer"></div>
-        <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="/">HOME</a>
-          <a class="mdl-navigation__link" href="https://matchboxdorry.gitbooks.io/matchboxblog/content/">BLOG</a>
-          <a class="mdl-navigation__link" href="/joinus.html">JOIN US</a>
-        </nav>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+  <link rel="stylesheet" href="assets/css/index.css">
+  <link rel="stylesheet" href="assets/css/head.css">
+  <link rel="stylesheet" href="assets/css/footer.css">
+  <link rel="stylesheet" href="assets/css/count.css">
+  <script defer src="assets/js/count.js"></script>
+
+  <meta charset="UTF-8">
+</head>
+
+<body>
+  <div id="overlay" class="overlay"></div>
+
+  <div class="header-container">
+    <div class="mdl-layout__header-row">
+      <img src="./assets/img/logo.svg">
+      <div class="head-logo">
+        DORRY
       </div>
+      <div class="mdl-layout-spacer"></div>
+      <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="/">HOME</a>
+        <a class="mdl-navigation__link" href="/documentation.html">DOCUMENTATION</a>
+        <a class="mdl-navigation__link" target="_blank" href="https://matchboxdorry.gitbooks.io/matchboxblog/content/">BLOG</a>
+        <a class="mdl-navigation__link" href="/joinus.html">JOIN US</a>
+      </nav>
     </div>
-    <div class="content-container">
-      <div class="countdown-container">
-        <p class="countdown-title">DORRY OS IS COMING SOON</p>
-        <p class="countdown-desc">Dorry is a professional enterprise platform, running on ARM and continually delivering secure<br>enterprise services based on the leading technology of virtualization.
-        </p>
-        <div class="countdown-time-container">
-          <p class="countdown-time-days">X</p>
+  </div>
+  <div class="content-container">
+    <div class="countdown-container">
+      <p class="countdown-title">DORRY OS NOW AVAILABLE!</p>
+      <p class="countdown-desc">Dorry is a professional enterprise platform, running on ARM and continually delivering secure<br>enterprise services
+        based on the leading technology of virtualization.
+      </p>
+      <!--<div class="countdown-time-container">
+          <p class="countdown-time-days"></p>
         </div>
         <div class="countdown-midline"></div>
-        <div class="countdown-time-unit">Days</div>
+        <div class="countdown-time-unit">Days</div>-->
+      <a class="download-a" href="./documentation.html">
         <div class="download-button">
-          <p>Download</p>
+          <div class="download">GET STARTED</div>
+          <!--<div class="version">v0.2.1</div>-->
         </div>
-        <div class="version-container">
-          <small>v0.2.1 | 4.3G</small>
+      </a>
+    </div>
+
+    <div class="demovedio-container">
+      <video style="width:960px;" id="videoplayer" preload='metadata' controls>
+        <source src="assets/dorry.mp4" type="video/mp4"> Video not supported.
+      </video>
+    </div>
+
+    <div class="product-info-container">
+      <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--3-col">
+          <img src="./assets/img/b&r.svg">
+          <p class="product-title">
+            Backup & Restore
+          </p>
+          <p class="product-desc">
+            Providing backup and<br>restore for application.
+          </p>
         </div>
-      </div>
-
-      <div class="demovedio-container">
-        <img src="./assets/img/demo.png">
-      </div>
-
-      <div class="product-info-container">
-        <div class="mdl-grid">
-          <div class="mdl-cell mdl-cell--3-col">
-            <img src="./assets/img/b&r.svg">
-            <p class="product-title">
-              Backup & Restore
-            </p>
-            <p class="product-desc">
-              Providing backup and<br>restore for application.
-            </p>
-          </div>
-          <div class="mdl-cell mdl-cell--3-col">
-            <img src="./assets/img/2U.svg">
-            <p class="product-title">
-              Updata & Upgrade
-            </p>
-            <p class="product-desc">
-              Providing automatic update<br>and upgrade.
-            </p>
-          </div>
-          <div class="mdl-cell mdl-cell--3-col">
-            <img src="./assets/img/sso.svg">
-            <p class="product-title">
-              SSO
-            </p>
-            <p class="product-desc">
-              Providing Single-Sign-On access<br>to enterprise services.
-            </p>
-          </div>
-          <div class="mdl-cell mdl-cell--3-col">
-            <img src="./assets/img/management.svg">
-            <p class="product-title">
-              Management
-            </p>
-            <p class="product-desc">
-              Providing friendly UX to<br>manipulate enterprise services.
-            </p>
-          </div>
+        <div class="mdl-cell mdl-cell--3-col">
+          <img src="./assets/img/2U.svg">
+          <p class="product-title">
+            Update & Upgrade
+          </p>
+          <p class="product-desc">
+            Providing automatic update<br>and upgrade.
+          </p>
+        </div>
+        <div class="mdl-cell mdl-cell--3-col">
+          <img src="./assets/img/sso.svg">
+          <p class="product-title">
+            SSO
+          </p>
+          <p class="product-desc">
+            Providing Single-Sign-On access<br>to enterprise services.
+          </p>
+        </div>
+        <div class="mdl-cell mdl-cell--3-col">
+          <img src="./assets/img/management.svg">
+          <p class="product-title">
+            Management
+          </p>
+          <p class="product-desc">
+            Providing friendly UX to<br>manipulate enterprise services.
+          </p>
         </div>
       </div>
     </div>
+  </div>
   </div>
   <div class="footer">
     <p>
@@ -109,7 +122,7 @@
     </p>
   </div>
   <script>
-    var end = new Date('02/19/2017 10:1 AM');
+    var end = new Date('03/31/2017 11:59 PM');
 
     var _second = 1000;
     var _minute = _second * 60;
@@ -134,6 +147,29 @@
     }
 
     timer = setInterval(showRemaining, 1000);
+
+    // //video play part $("#loadVideo").click(function () {   $(".video-container").show();   $("video").each(function () {     this.play();     this.currentTime = 0;   });   $(".overlay").show();   $('body').addClass('stop-scrolling') });
+    //
+    // $(".overlay").click(function () {   $("video").each(function () {     this.pause();     this.currentTime = 0;   });   $(".video-container").hide();   $(".overlay").hide(); }); video auto play trigger
+    $(function () {
+      var scrolltag = 0;
+      $(window).scroll(function (e) {
+
+        var scrollAmount = $('body').scrollTop();
+        //console.log(scrollAmount);
+
+        if (scrollAmount >= 450 && scrollAmount <= 1500) {
+          if (scrolltag == 0) {
+            $("video").each(function () {
+              this.play();
+              this.currentTime = 0;
+            });
+            scrolltag = 1;
+          }
+        }
+      });
+    });
   </script>
 </body>
+
 </html>
