--- a/joinus.html
+++ b/joinus.html
@@ -13,8 +13,10 @@
 
     <!-- material design part -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/joinus.css">
     <link rel="stylesheet" href="assets/css/head.css">
@@ -25,7 +27,7 @@
     <meta charset="UTF-8">
   </head>
   <body>
-    <div class="mdl-layout__header header-container">
+    <div class="header-container">
       <div class="mdl-layout__header-row">
         <img src="./assets/img/logo.svg">
         <div class="head-logo">
@@ -34,8 +36,9 @@
         <div class="mdl-layout-spacer"></div>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="/">HOME</a>
-          <a class="mdl-navigation__link" href="https://matchboxdorry.gitbooks.io/matchboxblog/content/">BLOG</a>
-          <a class="mdl-navigation__link" href="/joinus">JOIN US</a>
+          <a class="mdl-navigation__link" href="/documentation.html">DOCUMENTATION</a>
+          <a class="mdl-navigation__link" target="_blank" href="https://matchboxdorry.gitbooks.io/matchboxblog/content/">BLOG</a>
+          <a class="mdl-navigation__link" href="/joinus.html">JOIN US</a>
         </nav>
       </div>
     </div>
@@ -46,14 +49,18 @@
             <p class="upper-title">
               Full Stack Developer
             </p>
-            <p class="upper-content">
-              · Develop software based on high-­performance embedded system<br>
-              · Working on lightweight virtual machines<br>
-              · Working in pairs following SCRUM process<br>
-              · Developing, testing and releasing software following defined processes<br>
-              · Building and improving software development, testing and distributing<br>
-              environment
-            </p>
+            <ul class="upper-content">
+              <li>
+                Develop software based on high-­performance embedded system</li>
+              <li>
+                Working on lightweight virtual machines</li>
+              <li>
+                Working in pairs following SCRUM process</li>
+              <li>
+                Developing, testing and releasing software following defined processes</li>
+              <li>
+                Building and improving software development, testing and distributing environment</li>
+            </ul>
           </div>
           <div class="mdl-cell mdl-cell--5-col">
             <img src="./assets/img/icons.png">
