--- a/documentation.html
+++ b/documentation.html
@@ -55,7 +55,7 @@
             <div class="doc-h1">Install Dorry Platform</div>
             <div class="doc-version"> Ubuntu 16.04 </div>
             <div class="code-container">
-                <p>curl -sSL http://dorry-terryli.github.io/script/install.sh | sudo bash</p>
+                <p>curl -sSL http://dorry-terryli.github.io/script/install.sh | bash</p>
             </div>
             <div class="doc-desc">
                 <p><b>Dorry Platform</b> now is only supported on Ubuntu 16.04.</p>
@@ -65,7 +65,7 @@
             <div class="doc-h1">Uninstall Dorry Platform</div>
             <div class="doc-version"> Ubuntu 16.04 </div>
             <div class="code-container">
-                <p>curl -sSL http://dorry-terryli.github.io/script/uninstall.sh | sudo bash</p>
+                <p>curl -sSL http://dorry-terryli.github.io/script/uninstall.sh | bash</p>
             </div>
             <div class="doc-desc">
             </div>
