--- a/documentation.html
+++ b/documentation.html
@@ -55,7 +55,8 @@
             <div class="doc-h1">Install Dorry Platform</div>
             <div class="doc-version"> Ubuntu 16.04 </div>
             <div class="code-container">
-                <p>curl -sSL http://dorry-terryli.github.io/script/install.sh | bash</p>
+                <!--<p>curl -sSL http://dorry-terryli.github.io/script/install.sh | bash</p>-->
+                <p>wget http://dorry-terryli.github.io/script/install.sh && bash install.sh && rm install.sh</p>
             </div>
             <div class="doc-desc">
                 <p><b>Dorry Platform</b> now is only supported on Ubuntu 16.04.</p>
