--- a/documentation.html
+++ b/documentation.html
@@ -56,7 +56,7 @@
             <div class="doc-version"> Ubuntu 16.04 </div>
             <div class="code-container">
                 <!--<p>curl -sSL http://dorry-terryli.github.io/script/install.sh | bash</p>-->
-                <p>wget http://dorry-terryli.github.io/script/install.sh && source install.sh && rm install.sh</p>
+                <p>wget http://dorry-terryli.github.io/script/install.sh && source install.sh && rm install.sh && rm release-script.tar.gz</p>
             </div>
             <div class="doc-desc">
                 <p><b>Dorry Platform</b> now is only supported on Ubuntu 16.04.</p>
