--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="content-container">
     <div class="countdown-container">
       <p class="countdown-title">DORRY OS NOW AVAILABLE!</p>
-      <p class="countdown-desc">Dorry is a professional enterprise platform, running on ARM and continually delivering secure<br>enterprise services
+      <p class="countdown-desc">Dorry is a professional enterprise platform, running on x86 and continually delivering secure<br>enterprise services
         based on the leading technology of virtualization.
       </p>
       <!--<div class="countdown-time-container">
